| Bug #53246 | Watch shutdown can cause hanging process | ||
|---|---|---|---|
| Submitted: | 28 Apr 2010 12:15 | Modified: | 28 Apr 2010 14:37 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.2 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[28 Apr 2010 12:15]
Jonas Oreland
[28 Apr 2010 12:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/106804 3095 Jonas Oreland 2010-04-28 ndb bug#53246 - make sure to exit quickly in error situations, by calling _exit() instead of exit()
[28 Apr 2010 12:24]
Jonas Oreland
pushed to 6.2.19 and 6.3.34, already fixed in 7.x
[28 Apr 2010 14:37]
Jon Stephens
Documented fix in the NDB-6.2.19 and 6.3.34 changelogs as follows:
When a watchdog shutdown occurred due to an error, the process
was not terminated quickly enough, sometimes resulting in a hang.
(To correct this, the internal _exit() function is now called in
such situations, rather than exit().)
Closed.
