ndb bug#53246 - make sure to exit quickly in error situations, by calling _exit() instead of exit()